--- a/mod2_solution.html
+++ b/mod2_solution.html
@@ -18,7 +18,7 @@ Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et 
 </div>
 
 <div>
-    <h2 style= 'background-color: #C14543;color:white;'>Beef</h2>
+    <h2 id="h2-1">Beef</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. 
 Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
  turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. 
@@ -26,7 +26,7 @@ Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et 
 </div>
 
 <div id="div1">
-    <h2 style="background-color: #E5D198;">Sushi</h2>
+    <h2 id="h2-2">Sushi</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. 
 Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
  turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. 
